--- a/index.html
+++ b/index.html
@@ -1,68 +1,57 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ad Block & Boost Pro</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="https://photos.fife.usercontent.google.com/pw/AP1GczPULYF64O1yOPWjFUXVSbKrOiJ6E51TBnDDv9ugqfDTYE1-XeNPm7c=w512-h512-s-no-gm?authuser=0" />
 </head>
 <body>
   <header>
-    <div class="container">
-      <img src="assets/logo.png" alt="Logo" class="logo" />
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="downloads.html">Downloads</a></li>
-          <li><a href="license.html">Activate</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+    <div class="logo">
+      <img src="https://photos.fife.usercontent.google.com/pw/AP1GczPULYF64O1yOPWjFUXVSbKrOiJ6E51TBnDDv9ugqfDTYE1-XeNPm7c=w512-h512-s-no-gm?authuser=0" alt="Ad Block & Boost Logo" />
+      <h1>Ad Block & Boost Pro</h1>
     </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="downloads.html">Download</a>
+      <a href="license.html">License</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
   <section class="hero">
-    <div class="container">
-      <h1>Ad Block & Boost Pro</h1>
-      <p>Protect your PC from annoying ads, popups, and trackers.</p>
-      <a href="downloads.html" class="btn">Download Free Version</a>
-    </div>
+    <h2>Block ads & popups system-wide on your Windows PC</h2>
+    <p>Download the lightweight .exe app that blocks ads, speeds up browsing, and protects your PC — without installing a browser extension.</p>
+    <a href="downloads.html" class="button">Download Free Version</a>
   </section>
 
   <section class="features">
-    <div class="container">
-      <h2>Why Choose Ad Block & Boost?</h2>
-      <div class="grid">
-        <div class="feature">
-          <h3>🔒 Safe & Secure</h3>
-          <p>Blocks known ad domains and malicious popup sources at the system level.</p>
-        </div>
-        <div class="feature">
-          <h3>⚡ Boost Performance</h3>
-          <p>Improves browsing speed and reduces memory load from scripts and ads.</p>
-        </div>
-        <div class="feature">
-          <h3>🌐 Works System-Wide</h3>
-          <p>Not just for Chrome — affects all browsers and apps on your PC.</p>
-        </div>
+    <h3>Why Choose Ad Block & Boost Pro?</h3>
+    <div class="feature-grid">
+      <div>
+        <h4>🚫 Block Annoying Ads</h4>
+        <p>Block system-wide ads and popups from known ad servers using your hosts file — no extensions needed.</p>
+      </div>
+      <div>
+        <h4>⚡ Lightweight & Fast</h4>
+        <p>No background bloat. Simple, portable Windows app that just works.</p>
+      </div>
+      <div>
+        <h4>🛡️ Enhanced Privacy</h4>
+        <p>Stops many third-party trackers from loading silently in the background.</p>
+      </div>
+      <div>
+        <h4>💼 Pro Version Available</h4>
+        <p>Upgrade to unlock full ad blocking with 10,000+ domains, license-based access, and future features.</p>
       </div>
     </div>
   </section>
 
-  <section class="cta">
-    <div class="container">
-      <h2>Upgrade to Pro for Complete Ad Blocking</h2>
-      <p>Unlock thousands of blocked ad servers and Pro-only features.</p>
-      <a href="license.html" class="btn btn-secondary">Activate Pro Version</a>
-    </div>
-  </section>
-
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Ad Block & Boost. All rights reserved.</p>
-    </div>
+    <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
   </footer>
 </body>
 </html>
