--- a/faq.html
+++ b/faq.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FAQ – Ad Block & Boost Pro</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" href="https://photos.fife.usercontent.google.com/pw/AP1GczPULYF64O1yOPWjFUXVSbKrOiJ6E51TBnDDv9ugqfDTYE1-XeNPm7c=w512-h512-s-no-gm?authuser=0" />
+  <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="https://photos.fife.usercontent.google.com/pw/AP1GczPULYF64O1yOPWjFUXVSbKrOiJ6E51TBnDDv9ugqfDTYE1-XeNPm7c=w512-h512-s-no-gm?authuser=0" alt="Ad Block & Boost Logo" />
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" alt="Ad Block & Boost Logo" />
       <h1>Ad Block & Boost Pro</h1>
     </div>
     <nav>
