--- a/downloads.html
+++ b/downloads.html
@@ -32,7 +32,7 @@
       <div>
         <h4>🆓 Free Version</h4>
         <p>Blocks basic ad servers (5–6 entries). Great for trying it out before going Pro.</p>
-        <a href="#" class="button">Download Free (.exe)</a>
+        <a href="#" class="https://drive.google.com/uc?export=download&id=1jnfnhBrK4Qp8YJsNN2vAPKzocPbyIda9">Download Free (.exe)</a>
       </div>
       <div>
         <h4>💼 Pro Version</h4>
