--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="downloads.html">Download</a>
+      <a href="downloads.html">Buy Pro Version</a>
       <a href="license.html">License</a>
       <a href="faq.html">FAQ</a>
       <a href="contact.html">Contact</a>
