--- a/downloads.html
+++ b/downloads.html
@@ -32,12 +32,12 @@
       <div>
         <h4>🆓 Free Version</h4>
         <p>Blocks basic ad servers (5–6 entries). Great for trying it out before going Pro.</p>
-        <a href="https://drive.google.com/uc?export=download&id=1jnfnhBrK4Qp8YJsNN2vAPKzocPbyIda9" class="button">Download Free</a>
+        <a href="https://www.dropbox.com/scl/fi/ucfkc9spzmvz0dffanyyn/adblocker.exe?rlkey=80ipsb1ksirfs7ypq2e19jbgd&st=zqlplr9m&dl=1" class="button">Download Free</a>
       </div>
       <div>
         <h4>💼 Pro Version</h4>
         <p>Blocks 10,000+ ad servers. Requires license key after purchase.</p>
-        <a href="#" class="button">Download Pro (.exe)</a>
+        <a href="https://www.dropbox.com/scl/fi/b1p5gnuzuxao79fsiskrx/ProVersion.exe?rlkey=bbfkdk52yol3ggw67s20ocf7k&st=rg5t5jpe&dl=1" class="button">Download Pro Version</a>
       </div>
     </div>
   </section>
