--- a/index.html
+++ b/index.html
@@ -26,6 +26,31 @@
     <h2>Block ads & popups system-wide on your Windows PC</h2>
     <p>Download the lightweight .exe app that blocks ads, speeds up browsing, and protects your PC — without installing a browser extension.</p>
     <a href="downloads.html" class="button">Download Free Version</a>
+
+    <div class="personal-story">
+      <h3>Protecting Yourself from Cyber Crime: A Personal Story and a Powerful Tool for Your Safety</h3>
+      <p>Hi there! 👋 I'm a student and a part-time coder, and I’ve got something personal I’d like to share with you.</p>
+
+      <p>A few months ago, my grandfather became a victim of a cybercrime. He lost over $30,000 in a scam that preyed on his trust and lack of awareness. It was a devastating experience for our family, and it made me realize how many people—especially elderly folks—are vulnerable to these types of attacks.</p>
+
+      <p>Cybercrime is a growing problem, and it's everywhere. Hackers and scammers are constantly finding new ways to sneak into our computers, steal our personal information, and cause harm. It’s scary, but it’s also something we can fight back against—together.</p>
+
+      <p><strong>That’s why I decided to take action.</strong></p>
+
+      <p>I’ve built this website and created a small but powerful tool designed to block unwanted and spammy websites. This tool is mainly aimed at protecting elderly users who might be more prone to online scams. It’s simple, easy to use, and it works silently in the background to keep you safe from the prying eyes of cyber attackers.</p>
+
+      <h4>How It Works:</h4>
+      <p>This tool helps block malicious sites and prevents hackers from accessing your files. It’s a small step, but a crucial one, in protecting your privacy and security online. We’re all at risk from cybercrime, and taking preventative measures can make a huge difference.</p>
+
+      <h4>Want Even More Protection?</h4>
+      <p>If you’d like to take your safety to the next level, consider upgrading to the Pro version of this tool. For just $30, you’ll unlock even more features that further protect your system and ensure a smoother, safer online experience. Plus, your purchase helps support me as I continue to develop more software solutions and work towards becoming a full-time coder.</p>
+
+      <p>I created this tool with love and care, and my goal is to help people like you avoid becoming the next victim of a cybercrime. Whether you're tech-savvy or just getting started with using a computer, this tool is here to keep you safe.</p>
+
+      <p><strong>Thank you</strong> for supporting me and trusting this little project that means so much. I’m excited about the future, and with your support, I can continue building more amazing tools to make the internet a safer place for all of us!</p>
+
+      <p><strong>Stay safe online! 🌐💻</strong></p>
+    </div>
   </section>
 
   <section class="features">
