--- a/index.html
+++ b/index.html
@@ -78,5 +78,13 @@
   <footer>
     <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
   </footer>
+<footer class="footer-policy">
+  <div class="policy-links">
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
+    <a href="refund.html">Refunds</a>
+    <a href="shipping.html">Shipping</a>
+  </div>
+</footer>
 </body>
 </html>
