--- a/privacy.html
+++ b/privacy.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy – Ad Block & Boost Pro</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>This Privacy Policy explains how we handle your personal information. We respect your privacy and are committed to protecting it through our compliance with this policy.</p>
-  <p>We do not collect any personal information directly on our website. All payments are processed through third-party payment gateways (e.g., Razorpay), and we do not store your payment or billing information.</p>
-  <p>If you contact us by email, we may retain your message and contact details solely for support purposes. We do not sell, rent, or share your information with third parties.</p>
-  <p>By using this site or purchasing our software, you consent to this policy.</p>
+  <header>
+    <div class="logo">
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" alt="Ad Block & Boost Logo" />
+      <h1>Ad Block & Boost Pro</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="downloads.html">Buy Pro Version</a>
+      <a href="license.html">License</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section class="features">
+    <div class="feature-grid" style="max-width: 900px; margin: auto; display: block;">
+      <h2>Privacy Policy</h2>
+      
+        <p>We respect your privacy and are committed to protecting your personal information. We do not collect any personal data on our site. Payments are handled by Razorpay, and we do not store your payment details.</p>
+        <p>If you contact us by email, your message and contact details will be used only for support purposes.</p>
+        <p>We do not use tracking cookies, and we do not sell or share any data with third parties.</p>
+        
+    </div>
+  </section>
+  <footer>
+    <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
+  </footer>
+  <footer class="footer-policy">
+    <div class="policy-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="refund.html">Refunds</a>
+      <a href="shipping.html">Shipping</a>
+    </div>
+  </footer>
 </body>
 </html>
