--- a/refund.html
+++ b/refund.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Refund and Cancellation Policy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Refund & Cancellation Policy – Ad Block & Boost Pro</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
 <body>
-  <h1>Refund and Cancellation Policy</h1>
-  <p>All purchases are final. We do not offer refunds or cancellations once an order has been placed and payment completed.</p>
-  <p>Please try the free version before purchasing the Pro version to ensure it meets your needs.</p>
-  <p>If you encounter any technical issues, feel free to contact our support team for assistance.</p>
+  <header>
+    <div class="logo">
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" alt="Ad Block & Boost Logo" />
+      <h1>Ad Block & Boost Pro</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="downloads.html">Buy Pro Version</a>
+      <a href="license.html">License</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section class="features">
+    <div class="feature-grid" style="max-width: 900px; margin: auto; display: block;">
+      <h2>Refund & Cancellation Policy</h2>
+      
+        <p>All purchases are final. We do not offer refunds or cancellations after payment is completed.</p>
+        <p>Please try the free version before purchasing the Pro version to ensure it fits your needs.</p>
+        <p>If you have technical issues, contact us and we will do our best to assist you.</p>
+        
+    </div>
+  </section>
+  <footer>
+    <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
+  </footer>
+  <footer class="footer-policy">
+    <div class="policy-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="refund.html">Refunds</a>
+      <a href="shipping.html">Shipping</a>
+    </div>
+  </footer>
 </body>
 </html>
