--- a/terms.html
+++ b/terms.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Terms and Conditions</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Terms & Conditions – Ad Block & Boost Pro</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
 <body>
-  <h1>Terms and Conditions</h1>
-  <p>By purchasing or using our software, you agree to be bound by the terms and conditions outlined below:</p>
-  <ul>
-    <li>Our software is intended for lawful personal or business use only.</li>
-    <li>Unauthorized redistribution, resale, or reverse engineering of the software is strictly prohibited.</li>
-    <li>We reserve the right to update or discontinue features at any time without prior notice.</li>
-    <li>Use of this software is at your own risk. We are not liable for any damages or data loss resulting from its use.</li>
-  </ul>
-  <p>By proceeding with a purchase or use, you agree to these terms.</p>
+  <header>
+    <div class="logo">
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" alt="Ad Block & Boost Logo" />
+      <h1>Ad Block & Boost Pro</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="downloads.html">Buy Pro Version</a>
+      <a href="license.html">License</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <section class="features">
+    <div class="feature-grid" style="max-width: 900px; margin: auto; display: block;">
+      <h2>Terms & Conditions</h2>
+      
+        <p>By using our software or website, you agree to the following terms:</p>
+        <ul>
+          <li>The software is for personal or business use only.</li>
+          <li>Redistribution or reverse engineering is prohibited.</li>
+          <li>We reserve the right to update or terminate the product at any time.</li>
+          <li>Use of the software is at your own risk. We are not responsible for any loss or damages.</li>
+        </ul>
+        
+    </div>
+  </section>
+  <footer>
+    <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
+  </footer>
+  <footer class="footer-policy">
+    <div class="policy-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="refund.html">Refunds</a>
+      <a href="shipping.html">Shipping</a>
+    </div>
+  </footer>
 </body>
 </html>
