--- a/downloads.html
+++ b/downloads.html
@@ -37,7 +37,7 @@
       <div>
         <h4>💼 Pro Version</h4>
         <p>Blocks 10,000+ ad servers. Requires license key after purchase.</p>
-        <a href="https://www.dropbox.com/scl/fi/b1p5gnuzuxao79fsiskrx/ProVersion.exe?rlkey=bbfkdk52yol3ggw67s20ocf7k&st=rg5t5jpe&dl=1" class="button">Download Pro Version</a>
+        <a href="https://www.dropbox.com/scl/fi/7smlb7940iytpqe0dop2j/ProVersion.exe?rlkey=vuns25dmtdowlvs1hhckfwl3h&st=9ub0bhrn&dl=1" class="button">Download Pro Version</a>
         <br><br>
         <a href="https://your-purchase-link.com" class="button" style="background-color: #28a745;">Buy Pro Version – $30</a>
       </div>
