--- a/downloads.html
+++ b/downloads.html
@@ -39,7 +39,7 @@
         <p>Blocks 10,000+ ad servers. Requires license key after purchase.</p>
         <a href="https://www.dropbox.com/scl/fi/7smlb7940iytpqe0dop2j/ProVersion.exe?rlkey=vuns25dmtdowlvs1hhckfwl3h&st=9ub0bhrn&dl=1" class="button">Download Pro Version</a>
         <br><br>
-        <a href="https://www.paypal.com" class="button" style="background-color: #28a745;">Buy Pro Version – $30</a>
+        <a href="https://www.paypal.com/ncp/payment/32TRCS49R4JQL" class="button" style="background-color: #28a745;">Buy Pro Version – $30</a>
       </div>
     </div>
   </section>
