--- a/license.html
+++ b/license.html
@@ -37,7 +37,7 @@
       <div>
         <h4>💼 Don’t Have a Key Yet?</h4>
         <p>To unlock full access, purchase a license below. You'll receive your key by email instantly.</p>
-        <a href="#" class="button">Buy License Key</a>
+        <a href="https://www.paypal.com/ncp/payment/32TRCS49R4JQL" class="button">Buy License Key</a>
       </div>
     </div>
   </section>
