--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ad Block & Boost Pro</title>
   <!-- ✅ Google AdSense Verification Meta Tag -->
-  <meta name="google-site-verification" content="your-verification-code" />
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="google-adsense-account" content="ca-pub-6721936150678970">  <link rel="stylesheet" href="style.css"/>
   <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
 <body>
