--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FAQ – Ad Block & Boost Pro</title>
+
+  <!-- ✅ Google AdSense Verification -->
+  <meta name="google-adsense-account" content="ca-pub-6721936150678970">
+
+  <!-- ✅ Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721936150678970"
+    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
@@ -26,6 +34,19 @@
     <h2>Frequently Asked Questions</h2>
     <p>Answers to common questions about Ad Block & Boost Pro</p>
   </section>
+
+  <!-- ✅ Google AdSense Display Ad -->
+  <div style="text-align: center; margin: 40px 0;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-6721936150678970"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
 
   <section class="features">
     <div class="feature-grid">
@@ -60,11 +81,12 @@
     <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
   </footer>
   <footer class="footer-policy">
-  <div class="policy-links">
-    <a href="privacy.html">Privacy</a>
-    <a href="terms.html">Terms</a>
-    <a href="refund.html">Refunds</a>
-    <a href="shipping.html">Shipping</a>
-  </div>
+    <div class="policy-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="refund.html">Refunds</a>
+      <a href="shipping.html">Shipping</a>
+    </div>
+  </footer>
 </body>
 </html>
