--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,15 @@
   <!-- ✅ Google AdSense Site Verification -->
   <meta name="google-adsense-account" content="ca-pub-6721936150678970">
 
+  <!-- ✅ Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JECH2K8WVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JECH2K8WVK');
+  </script>
+
   <!-- ✅ Google AdSense Script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721936150678970"
     crossorigin="anonymous"></script>
@@ -58,12 +67,12 @@
       <div>
         <h4>💬 Feedback & Suggestions</h4>
         <p>Have a feature idea or want to report a problem? We’d love to hear from you.</p>
-        <p><a href="mailto:support@yourdomain.com">Click here to send feedback</a></p>
+        <p><a href="mailto:adblockerbyteamgeek@gmail.com">Click here to send feedback</a></p>
       </div>
       <div>
         <h4>🐛 Report a Bug</h4>
         <p>If you're a technical user, you can also open an issue on our GitHub (optional):</p>
-        <p><a href="https://github.com/yourusername/adblock-site/issues" target="_blank">GitHub Issues</a></p>
+        <p><a href="https://github.com/adblockerbyteamgeek/Ad-Blocker/issues" target="_blank">GitHub Issues</a></p>
       </div>
     </div>
   </section>
