--- a/downloads.html
+++ b/downloads.html
@@ -8,6 +8,15 @@
   <!-- ✅ Google AdSense Verification -->
   <meta name="google-adsense-account" content="ca-pub-6721936150678970">
 
+  <!-- ✅ Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JECH2K8WVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JECH2K8WVK');
+  </script>
+
   <!-- ✅ Google AdSense Script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721936150678970"
     crossorigin="anonymous"></script>
