--- a/license.html
+++ b/license.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>License – Ad Block & Boost Pro</title>
+
+  <!-- ✅ Google AdSense Site Verification -->
+  <meta name="google-adsense-account" content="ca-pub-6721936150678970">
+
+  <!-- ✅ Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JECH2K8WVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JECH2K8WVK');
+  </script>
+
+  <!-- ✅ Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721936150678970"
+    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
 </head>
@@ -27,6 +44,19 @@
     <p>Purchased a license? Here's how to unlock full ad blocking on your PC.</p>
   </section>
 
+  <!-- ✅ Google AdSense Display Ad -->
+  <div style="text-align: center; margin: 40px 0;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-6721936150678970"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <section class="features">
     <div class="feature-grid">
       <div>
@@ -37,7 +67,7 @@
       <div>
         <h4>💼 Don’t Have a Key Yet?</h4>
         <p>To unlock full access, purchase a license below. You'll receive your key by email instantly.</p>
-        <a href="https://www.paypal.com/ncp/payment/32TRCS49R4JQL" class="button">Buy License Key</a>
+        <a href="https://www.paypal.com/ncp/payment/32TRCS49R4JQL" class="button" style="background-color: #28a745;">Buy License Key – $30</a>
       </div>
     </div>
   </section>
@@ -45,12 +75,14 @@
   <footer>
     <p>© 2025 Ad Block & Boost Software. All rights reserved.</p>
   </footer>
-<footer class="footer-policy">
-  <div class="policy-links">
-    <a href="privacy.html">Privacy</a>
-    <a href="terms.html">Terms</a>
-    <a href="refund.html">Refunds</a>
-    <a href="shipping.html">Shipping</a>
-  </div>
+
+  <footer class="footer-policy">
+    <div class="policy-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+      <a href="refund.html">Refunds</a>
+      <a href="shipping.html">Shipping</a>
+    </div>
+  </footer>
 </body>
 </html>
