--- a/thankyou.html
+++ b/thankyou.html
@@ -4,8 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thank You – Ad Block & Boost Pro</title>
+
+  <!-- ✅ Google AdSense Verification -->
+  <meta name="google-adsense-account" content="ca-pub-6721936150678970">
+
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JECH2K8WVK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JECH2K8WVK');
+  </script>
+
+  <!-- ✅ AdSense Script (optional for ads here) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721936150678970"
+    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="https://lh3.googleusercontent.com/pw/AP1GczOIGtaaFkz4Srb4XTvB5fr8kT1k3-RiKNM6MYvMba6czZoIeX_BEWEH5x6CCG9ry7ZH01eweja-M_jQwxLxxoXD--J5apzLv2P5xpf3j-RcXYP78I5fCCBN9Ro5-mR2S0t5tziq52fTRYlJmti9y1Y=w512-h512-s-no-gm" />
+
   <style>
     .thankyou-container {
       max-width: 700px;
@@ -60,6 +78,19 @@
     <p>We’ve sent an email to you with your license key and download link for the Pro version.</p>
     <p><strong>Please check your inbox.</strong> If you don’t see the email, check your spam folder and mark it as <em>“Not Spam”</em>.</p>
     <a class="button" href="index.html">← Back to Home</a>
+  </div>
+
+  <!-- Optional AdSense Banner -->
+  <div style="text-align: center; margin: 40px 0;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-6721936150678970"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </div>
 </body>
 </html>
