--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
     <a href="downloads.html" class="button">Download Free Version</a>
   </section>
 
+  <!-- ✅ Conditionally visible AdSense container -->
+  <div id="adsense-container" style="text-align: center; margin: 40px 0; display: none;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-6721936150678970"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      window.addEventListener('load', function () {
+        const ad = document.querySelector('.adsbygoogle');
+        const container = document.getElementById('adsense-container');
+        if (ad && ad.innerHTML.trim().length > 0) {
+          container.style.display = 'block';
+        }
+      });
+    </script>
   </div>
 
   <div class="personal-story">
