--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Ad Block & Boost Pro</title>
 
-  <!-- ✅ Google AdSense Site Verification -->
+  <!-- ✅ Google AdSense Verification -->
   <meta name="google-adsense-account" content="ca-pub-6721936150678970">
 
   <!-- ✅ Google Analytics (GA4) -->
@@ -44,8 +44,8 @@
     <p>Need help, found a bug, or have feedback? Get in touch below.</p>
   </section>
 
-  <!-- ✅ Google AdSense Display Ad -->
-  <div style="text-align: center; margin: 40px 0;">
+  <!-- ✅ AdSense block that hides if empty -->
+  <div id="adsense-container" style="text-align: center; margin: 40px 0; display: none;">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-6721936150678970"
@@ -53,7 +53,14 @@
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
     <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      window.addEventListener('load', function () {
+        const ad = document.querySelector('.adsbygoogle');
+        const container = document.getElementById('adsense-container');
+        if (ad && ad.innerHTML.trim().length > 0) {
+          container.style.display = 'block';
+        }
+      });
     </script>
   </div>
 
